--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -324,15 +324,10 @@ pre > code {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 th,
 td {
-  padding: 12px 8px;
+  padding: 6px 6px;
   text-align: left;
-  border-bottom: 1px solid #E1E1E1; }
-th:first-child,
-td:first-child {
-  padding-left: 0; }
-th:last-child,
-td:last-child {
-  padding-right: 0; }
+  border: 1px solid black; }
+
 
 
 /* Spacing
